# kerosene

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: lint.yaml
example/playbook/: deploy.yml  inventory.kerosene.yml
example/playbook/roles/basesetup/tasks/: main.yml
example/playbook/roles/solana/defaults/: main.yml
example/playbook/roles/solana/handlers/: main.yml
example/playbook/roles/solana/tasks/: main.yml
example/playbook/roles/solana/templates/: solana.service.j2
hack/: goss.yaml  test.sh
hack/dev/: dev_ed25519  dev_ed25519.pub
hack/test/: inventory.kerosene.yml  playbook.yml
hack/test/files/: hello.txt
hack/test/templates/: greeting.txt.j2
src/: butane.rs  command.rs  inventory.rs  lib.rs  main.rs  render.rs
src/serde/: mod.rs  play.rs  task.rs
src/task/: copy.rs  curl.rs  import_tasks.rs  meta.rs  mod.rs  set_fact.rs  shell.rs  systemd.rs  template.rs
