[package]
name = "kerosene"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive", "env"] }
eyre = "0.6.12"
inventory = "0.3.22"
minijinja = { version = "2.16.0", features = ["json"] }
russh = "0.48.2"
russh-config = "0.48.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shlex = "1.3.0"
structstruck = "0.4.1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
